create sponsor screen and set up loading img

--- a/app.json
+++ b/app.json
@@ -2,20 +2,21 @@
   "expo": {
     "name": "PulvBlinders",
     "slug": "pulvblinders",
-    "privacy": "public",
+    "privacy": "unlisted",
     "sdkVersion": "34.0.0",
     "platforms": [
       "ios",
-      "android",
-      "web"
+      "android"
     ],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
+    "githubUrl": "https://github.com/Warthy/pulvBlinders",
+    "primaryColor": "#000000",
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#000000"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -24,7 +25,19 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "bundleIdentifier": "com.venardpaul.pulvblinders",
+      "supportsTablet": true,
+      "icon": "./assets/images/icon.png"
+    },
+    "android": {
+      "package": "com.venardpaul.pulvblinders",
+      "versionCode": 1,
+      "icon": "./assets/images/icon.png"
+    },
+    "description": "Application du BDE PulvBlinders",
+    "notification": {
+      "icon": "./assets/images/notification.png",
+      "color": "#000000"
     }
   }
 }
