--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "expo-asset": "^6.0.0",
     "expo-constants": "6.0.0",
     "expo-font": "~6.0.0",
-    "expo-web-browser": "6.0.0",
+    "expo-permissions": "latest",
+    "expo-web-browser": "^6.0.0",
     "moment": "^2.24.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
@@ -24,8 +25,7 @@
     "react-native-elements": "^1.2.0",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.0",
-    "expo-permissions": "latest"
+    "react-navigation": "^3.11.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0"
